--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -239,6 +239,20 @@ nav {
 	border-right: 0;
 }
 
+.name {
+	text-transform: uppercase;
+	color: #ffffff;
+	text-align: center;
+	h4 {
+		font-family: 'Roboto Black', sans-serif;
+		font-size: 14px;
+	}
+	span {
+		font-family: 'Roboto Light', sans-serif;
+		font-size: 13px;
+	}
+ }
+
 .team {
 	background: url('../img/bg_team.jpg') no-repeat top center;
 	background-size: cover;
@@ -263,13 +277,12 @@ nav {
 			}
 		}
 		.team_member_name {
-			text-transform: uppercase;
-			color: #ffffff;
-			text-align: center;
-			padding-bottom: 25px;
+			@extend .name;
 			border-top: 1px solid #77748b;
+			padding-bottom: 25px;
 		}
 	}
+	
 	.hiring {
 		text-align: center;
 		color: #f3f3f3;
@@ -279,5 +292,114 @@ nav {
 			width: 138px;
 			margin: 30px auto 60px;
 		}
+		p {
+			font-family: 'Roboto Light', sans-serif;
+		}
+	}
+}
+
+.works {
+	h2 {
+		@extend .headline;
+		margin: 60px;
+	}
+	.projects {
+		margin-top: 65px;
+		a {
+		color: #5a5763;
+		text-decoration: none;
+		text-align: left;
+		font-family: 'Roboto Light', sans-serif;
+		font-size: 14px;
+		&:after {
+			content: url('../img/arrow.png');
+			padding-left: 10px;
+			padding-top: 2px;
+		}
+		}
+	}
+	.no-margin {
+		margin: 0px 0px;
+		padding-right:0;
+    padding-left:0;
+    img {
+    	width: 100%;
+    	display: block;
+    }
+	}
+	.button {
+		@extend .btn;
+		padding: 10px 0 70px 0;
+		margin: 60px auto;
+		& a:hover {
+			background-color: #00e0d0;
+			color: #ffffff;
+		}
+	}
+}
+.reviews {
+	background: url('../img/bg_review.jpg') no-repeat center center;
+	background-size: cover;
+	.owl-custom-dots {
+		height: 50px;
+		.owl-custom-dot {
+			height: 50px;
+			width: 50px;
+		}
+	}
+	.review_item {
+		.review_name {
+			@extend .name;
+		}
+	}
+}
+#carousel-custom-dots {
+	text-align: center;
+  margin: 55px 0px 40px;
+}
+.owl-custom-dot {
+	display: inline-block;
+	margin-right: 10px;
+	cursor: pointer;
+	img {
+		image-rendering: optimizeQuality;
+	}
+}
+.owl-custom-dot.active {
+	transform: scale(1.3);
+}
+.owl-nav {
+	.owl-prev {
+		position: absolute;
+		top: 120%;
+		left: 32%;
+	}
+	.owl-next {
+		position: absolute;
+		top: 120%;
+		right: 33%;
+	}
+}
+.review_item {
+	.quotes {
+		background: url('../img/quotes.png') no-repeat center center;
+		height: 50px;
+		margin: 60px 0px 15px;
+	}
+	p {
+		font-family: 'Playfair Display', serif;
+		font-weight: 400;		
+    font-size: 16px;
+		line-height: 26px;
+		text-align: center;
+		color: #ffffff;
+		margin-bottom: 30px;
+	}
+	h4 {
+		font-family: 'Roboto Black', sans-serif;
+		font-size: 14px;
+		line-height: 22px;
+		text-transform: uppercase;
+		margin-bottom: 10px;
 	}
 }
